atualização de conteúdo e estilo

--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -1,5 +1,5 @@
 # Premium posgraduate redesign
-The navigation flow and the entire course purchase process were completely renewed.
+I redesigned the postgraduate course purchase flow with a premium UI, achieving 57.14% faster navigation.
 
 - **Timeline** 3 months.
 - **My role** Product Designer, UX Researcher, Recruiter.
