--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -1,5 +1,5 @@
 # Premium posgraduate redesign
-I redesigned the postgraduate course purchase flow with a premium UI, achieving 57.14% faster navigation.
+I redesigned the postgraduate course purchase flow with a premium UI, <mark>achieving 57.14% faster navigation.</mark>
 
 - **Timeline** 3 months.
 - **My role** Product Designer, UX Researcher, Recruiter.
