animações em posgraduate

--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -1,3 +1,11 @@
+import * as motion from "framer-motion/client";
+
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0, duration: 0.4, ease: "easeOut" }}>
+
 # Premium posgraduate redesign
 I redesigned the postgraduate course purchase flow with a premium UI, <mark>achieving 57.14% faster navigation.</mark>
 
@@ -5,7 +13,13 @@ I redesigned the postgraduate course purchase flow with a premium UI, <mark>achi
 - **My role** Product Designer, UX Researcher, Recruiter.
 - **Team** The product manager and I.
 - **Goals** Redesign the course purchase experience to highlight their premium offering.
+</motion.div>
 
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 ---
 
 ## Previous design
@@ -16,20 +30,38 @@ There was no mobile version, and what loaded on smartphones was the reduced web 
 
 ![](posgraduate/old-screens-2.png)
 <small>Simplified previous course purchase journey.</small>
+</motion.div>
 
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 ---
 
 ## Desk research
 In the market perception analysis, compared to other institutions offering the same model of digital post-graduate programs, <mark>the university was positioned with the second-highest price.</mark>
 
 In the benchmarking of the enrollment journey, it became clear that the user effort required to enroll using the website was much higher compared to competitors.
+</motion.div>
 
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 ---
 
 ## What were the problems?
 - We did not have a defined visual identity.
 - We needed to <mark>communicate the aspect of a premium product</mark>, respecting the market positioning found in the previous analysis.
+</motion.div>
 
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 ---
 
 ## Redesigning the experience
@@ -40,12 +72,19 @@ The redesign incorporated all aspects of the previous analysis. <mark>I created 
 
 ![](posgraduate/new-screens-2.png)
 <small>Simplified new course purchase journey.</small>
+</motion.div>
 
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 ---
 
 ## Usability Testing
 Using Maze, two unmoderated usability tests were conducted to test the fluidity of navigation and the difference from the previous version: one test with the previous version and one test with the new version. 
 
-The 10 tests performed (5 of each model) resulted in <mark>57.14% faster navigation and a 67% drop in the rate of incorrect clicks.</mark>
+Regarding the recruitment of participants, it was done by me, and a discount coupon for the bookstore was used as an incentive to participate.
 
-Regarding the recruitment of participants, it was done by me, and a discount coupon for the bookstore was used as an incentive to help with this.
+The 10 tests performed (5 of each model) resulted in <mark>57.14% faster navigation and a 67% drop in the rate of incorrect clicks.</mark>
+</motion.div>
