Melhorias em conteúdo e estilo da home

--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -8,10 +8,10 @@ import * as motion from "framer-motion/client";
 
 # Payment of outstanding fees
 How I designed the re-enrollment flow, automating financial processes and <mark>boosting debt clearance and re-enrollments</mark>.
-- **Timeline** 1 month.
-- **My role** Product Designer, UX Researcher, Recruiter.
 - **Team** The product owner and I.
-- **Goals** Design a flow that allows students to settle their outstanding debts and complete their re-enrollment.
+- **My role** UI Designer, UX Researcher, Recruiter.
+- **Tools** Figma and Maze.
+- **Goal** Design a flow that allows students to settle their outstanding debts and complete their re-enrollment.
 </motion.div>
 
 <motion.div
@@ -22,7 +22,7 @@ How I designed the re-enrollment flow, automating financial processes and <mark>
 ---
 
 ## Start the project
-After this project, every re-enrollment was done manually with human contact.
+Before this project, every re-enrollment was done manually with human contact.
 
 <figure>
   <img src="re-enrollment/frustrated-student.png" className="shadow-yellow-500/40" />
@@ -31,10 +31,32 @@ After this project, every re-enrollment was done manually with human contact.
 
 I designed the <mark>entire re-enrollment flow</mark>, including the part showcased in this case study as well as the back-office configuration section.
 
-<figure>
-  <img src="re-enrollment/new-screens.png" className="shadow-purple-500/40" />
-  <figcaption>The new interfaces allow users to renew their enrollment through the student portal.</figcaption>
-</figure>
+<div className="case-images">
+  <figure>
+    <img src="re-enrollment/new-screens-1.png"/>
+    <figcaption>1. Pending Re-enrollment List</figcaption>
+  </figure>
+
+  <figure>
+    <img src="re-enrollment/new-screens-2.png"/>
+    <figcaption>2. Payment of Outstanding Fees</figcaption>
+  </figure>
+
+  <figure>
+    <img src="re-enrollment/new-screens-3.png"/>
+    <figcaption>3. Payment Method Selection</figcaption>
+  </figure>
+
+  <figure>
+    <img src="re-enrollment/new-screens-4.png"/>
+    <figcaption>4. Choice Between Payment and Negotiation</figcaption>
+  </figure>
+
+  <figure>
+    <img src="re-enrollment/new-screens-5.png"/>
+    <figcaption>5. Conclusion - After Payment</figcaption>
+  </figure>
+</div>
 </motion.div>
 
 <motion.div
@@ -71,7 +93,7 @@ One of the post-test questions validated what the journey recordings also indica
 Utilize a step-by-step pattern to avoid confusing users about the existence of two separate yet sequential payments.
 
 <figure>
-  <img src="re-enrollment/result.png" className="shadow-purple-500/40" />
+  <img src="re-enrollment/result.png" className="shadow-emerald-500/40" />
   <figcaption>A responsive solution to the missclick issue found in usability testing.</figcaption>
 </figure>
 
