--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -9,9 +9,9 @@ import * as motion from "framer-motion/client";
 # Premium posgraduate redesign
 I redesigned the postgraduate course purchase flow with a premium UI, <mark>achieving 57.14% faster navigation.</mark>
 
-- **Timeline** 3 months.
-- **My role** Product Designer, UX Researcher, Recruiter.
 - **Team** The product manager and I.
+- **My role** Product Designer, UX Researcher, Recruiter.
+- **Tools** Figma, Miro and Maze.
 - **Goals** Redesign the course purchase experience to highlight their premium offering.
 </motion.div>
 
@@ -24,12 +24,34 @@ I redesigned the postgraduate course purchase flow with a premium UI, <mark>achi
 
 ## Previous design
 There was no mobile version, and what loaded on smartphones was the reduced web version.
+Below, the simplified previous course selection journey.
 
-![](posgraduate/old-screens-1.png)
-<small>Simplified previous course selection journey.</small>
+<div className="case-images">
+  <figure>
+    <img src="posgraduate/old-screens-1.png"/>
+    <figcaption>1. Institution's Home Page</figcaption>
+  </figure>
 
-![](posgraduate/old-screens-2.png)
-<small>Simplified previous course purchase journey.</small>
+  <figure>
+    <img src="posgraduate/old-screens-2.png"/>
+    <figcaption>2. Course Description Page</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/old-screens-3.png"/>
+    <figcaption>3. Subscription - Course Selection</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/old-screens-4.png"/>
+    <figcaption>4. Subscription - Payment Method Selection</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/old-screens-5.png"/>
+    <figcaption>5. Subscription - Payment Method Selection</figcaption>
+  </figure>
+</div>
 </motion.div>
 
 <motion.div
@@ -54,7 +76,7 @@ In the benchmarking of the enrollment journey, it became clear that the user eff
 
 ## What were the problems?
 - We did not have a defined visual identity.
-- We needed to <mark>communicate the aspect of a premium product</mark>, respecting the market positioning found in the previous analysis.
+- I needed to <mark>communicate the aspect of a premium product</mark>, respecting the market positioning found in the previous analysis.
 </motion.div>
 
 <motion.div
@@ -66,12 +88,34 @@ In the benchmarking of the enrollment journey, it became clear that the user eff
 
 ## Redesigning the experience
 The redesign incorporated all aspects of the previous analysis. <mark>I created a style guide containing navigation components and a new color palette.</mark>
+Below, the simplified new course selection journey.
 
-![](posgraduate/new-screens-1.png)
-<small>Simplified new course selection journey.</small>
+<div className="case-images">
+  <figure>
+    <img src="posgraduate/new-screens-1.png"/>
+    <figcaption>1. Institution's Home Page</figcaption>
+  </figure>
 
-![](posgraduate/new-screens-2.png)
-<small>Simplified new course purchase journey.</small>
+  <figure>
+    <img src="posgraduate/new-screens-2.png"/>
+    <figcaption>2. Course Description Page</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/new-screens-3.png"/>
+    <figcaption>3. Subscription - Course Selection</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/new-screens-4.png"/>
+    <figcaption>4. Subscription - Payment Method Selection</figcaption>
+  </figure>
+
+  <figure>
+    <img src="posgraduate/new-screens-5.png"/>
+    <figcaption>5. Subscription - Payment Method Selection</figcaption>
+  </figure>
+</div>
 </motion.div>
 
 <motion.div
