melhorias de conteúdo

--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -9,10 +9,11 @@ import * as motion from "framer-motion/client";
 # Premium posgraduate redesign
 I redesigned the postgraduate course purchase flow with a premium UI, <mark>achieving 57.14% faster navigation.</mark>
 
-- **Team** The product manager and I.
-- **My role** Product Designer, UX Researcher, Recruiter.
-- **Tools** Figma, Miro and Maze.
-- **Goals** Redesign the course purchase experience to highlight their premium offering.
+<div className="project-details">
+- **Squad team** Product manager, devs, and I
+- **Role** UI/UX, Researcher, Recruiter
+- **Tools** Figma, Miro, Maze
+</div>
 </motion.div>
 
 <motion.div
@@ -20,7 +21,17 @@ I redesigned the postgraduate course purchase flow with a premium UI, <mark>achi
   initial={{ opacity: 0 }}
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
----
+
+## What were the problems?
+- We did not have a defined visual identity.
+- I needed to <mark>communicate the aspect of a premium product</mark>, respecting the market positioning found in the previous analysis.
+</motion.div>
+
+<motion.div
+  viewport={{ once: true }}
+  initial={{ opacity: 0 }}
+  whileInView={{ opacity: 1, y: [20, 0] }}
+  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 
 ## Previous design
 There was no mobile version, and what loaded on smartphones was the reduced web version.
@@ -61,9 +72,10 @@ Below, the simplified previous course selection journey.
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 
 ## Desk research
-In the market perception analysis, compared to other institutions offering the same model of digital post-graduate programs, <mark>the university was positioned with the second-highest price.</mark>
 
-In the benchmarking of the enrollment journey, it became clear that the user effort required to enroll using the website was much higher compared to competitors.
+**Benchmarking:** it became clear that the user effort required to enroll using the website was much higher compared to competitors.
+
+**Market perception analysis:** compared to other institutions offering the same model of digital post-graduate programs, <mark>the university was positioned with the second-highest price.</mark>
 </motion.div>
 
 <motion.div
@@ -71,19 +83,6 @@ In the benchmarking of the enrollment journey, it became clear that the user eff
   initial={{ opacity: 0 }}
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
----
-
-## What were the problems?
-- We did not have a defined visual identity.
-- I needed to <mark>communicate the aspect of a premium product</mark>, respecting the market positioning found in the previous analysis.
-</motion.div>
-
-<motion.div
-  viewport={{ once: true }}
-  initial={{ opacity: 0 }}
-  whileInView={{ opacity: 1, y: [20, 0] }}
-  transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
----
 
 ## Redesigning the experience
 The redesign incorporated all aspects of the previous analysis. <mark>I created a style guide containing navigation components and a new color palette.</mark>
