--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -8,10 +8,12 @@ import * as motion from "framer-motion/client";
 
 # Payment of outstanding fees
 How I designed the re-enrollment flow, automating financial processes and <mark>boosting debt clearance and re-enrollments</mark>.
-- **Team** The product owner and I.
-- **My role** UI Designer, UX Researcher, Recruiter.
-- **Tools** Figma and Maze.
-- **Goal** Design a flow that allows students to settle their outstanding debts and complete their re-enrollment.
+
+<div className="project-details">
+- **Squad team** Product owner, devs, and I
+- **Role** UI/UX, Researcher, Recruiter
+- **Tools** Figma, Maze
+</div>
 </motion.div>
 
 <motion.div
@@ -19,7 +21,6 @@ How I designed the re-enrollment flow, automating financial processes and <mark>
   initial={{ opacity: 0 }}
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
----
 
 ## Start the project
 Before this project, every re-enrollment was done manually with human contact.
@@ -29,7 +30,8 @@ Before this project, every re-enrollment was done manually with human contact.
   <figcaption>Users needed to contact the call center to renew their enrollment.</figcaption>
 </figure>
 
-I designed the <mark>entire re-enrollment flow</mark>, including the part showcased in this case study as well as the back-office configuration section.
+## Designing the experience
+After aligning with the stakeholders and the responsible department, I designed the <mark>entire re-enrollment flow</mark>, including the part showcased in this case study as well as the back-office configuration section.
 
 <div className="case-images">
   <figure>
@@ -67,13 +69,13 @@ I designed the <mark>entire re-enrollment flow</mark>, including the part showca
 
 ## Problem: Clarifying payment vs negotiation flow
 
-The stakeholders were uncertain if users would understand the difference between choosing "Proceed to Payment" or "Proceed to Negotiation".
+The stakeholders were uncertain if users would understand the difference between choosing **Proceed to Payment** or **Proceed to Negotiation** (image 4 above).
 
-Using Maze, two unmoderated usability tests were conducted: one with the previous version and one with the new version, to test navigation fluidity and differences.
+**Conducted unmoderated usability test:** users completed the re-enrollment flow (shown in the images above) while going through the pending debts screen.
 
-One of the post-test questions validated what the journey recordings also indicated: <mark>100% of participants said they felt very confident or confident about choosing</mark> between "Proceed to Payment" or "Proceed to Negotiation", and the subsequent page aligned with their expectations from that choice.
+One of the post-test questions validated what the journey recordings also indicated: <mark>100% of participants said they felt confident</mark> about choosing between **Proceed to Payment** or **Proceed to Negotiation**, and the subsequent page aligned with their expectations from that choice.
 
-<mark>However, an unexpected problem arose:</mark> in addition to some misclicks, some users reported confusion on this screen due to two payment boxes appearing consecutively.
+However, an <mark>unexpected problem arose:</mark> in addition to some misclicks, some users reported confusion on this screen due to two payment boxes appearing consecutively.
 
 <figure>
   <img src="re-enrollment/maze.png" className="shadow-blue-500/40" />
@@ -86,15 +88,14 @@ One of the post-test questions validated what the journey recordings also indica
   initial={{ opacity: 0 }}
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
----
 
 ## Proposed solution
 Utilize a step-by-step pattern to avoid confusing users about the existence of two separate yet sequential payments.
+
+According to the responsible department, after this feature was implemented, <mark>the number of outstanding payments and re-enrollments increased significantly.</mark>
 
 <figure>
   <img src="re-enrollment/result.png" className="shadow-emerald-500/40" />
   <figcaption>A responsive solution to the missclick issue found in usability testing.</figcaption>
 </figure>
-
-I don't have the exact numbers yet, but according to the responsible department, after this feature was implemented, <mark>the number of outstanding payments and re-enrollments increased significantly.</mark>
 </motion.div>
