Alteração de pngs para svgs

--- a/src/app/posgraduate/case.mdx
+++ b/src/app/posgraduate/case.mdx
@@ -7,7 +7,7 @@ import * as motion from "framer-motion/client";
   transition={{ delay: 0, duration: 0.4, ease: "easeOut" }}>
 
 # Premium posgraduate redesign
-I redesigned the postgraduate course purchase flow with a premium UI, <mark>achieving 57.14% faster navigation.</mark>
+I redesigned the postgraduate course purchase flow with a premium UI, achieving 57.14% faster navigation.
 
 <div className="project-details">
 - **Squad team** Product manager, devs, and I
@@ -90,27 +90,27 @@ Below, the simplified new course selection journey.
 
 <div className="case-images">
   <figure>
-    <img src="posgraduate/new-screens-1.png"/>
+    <img src="posgraduate/new-screens-1.svg"/>
     <figcaption>1. Institution's Home Page</figcaption>
   </figure>
 
   <figure>
-    <img src="posgraduate/new-screens-2.png"/>
+    <img src="posgraduate/new-screens-2.svg"/>
     <figcaption>2. Course Description Page</figcaption>
   </figure>
 
   <figure>
-    <img src="posgraduate/new-screens-3.png"/>
+    <img src="posgraduate/new-screens-3.svg"/>
     <figcaption>3. Subscription - Course Selection</figcaption>
   </figure>
 
   <figure>
-    <img src="posgraduate/new-screens-4.png"/>
+    <img src="posgraduate/new-screens-4.svg"/>
     <figcaption>4. Subscription - Payment Method Selection</figcaption>
   </figure>
 
   <figure>
-    <img src="posgraduate/new-screens-5.png"/>
+    <img src="posgraduate/new-screens-5.svg"/>
     <figcaption>5. Subscription - Payment Method Selection</figcaption>
   </figure>
 </div>
