--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -1,4 +1,5 @@
 import * as motion from "framer-motion/client";
+import Image from 'next/image'
 
 <motion.div
   viewport={{ once: true }}
@@ -7,7 +8,7 @@ import * as motion from "framer-motion/client";
   transition={{ delay: 0, duration: 0.4, ease: "easeOut" }}>
 
 # Payment of outstanding fees
-How I designed the re-enrollment flow, automating financial processes and <mark>boosting debt clearance and re-enrollments</mark>.
+How I designed the re-enrollment flow, automating financial processes and boosting debt clearance and re-enrollments.
 
 <div className="project-details">
 - **Squad team** Product owner, devs, and I
@@ -35,27 +36,27 @@ After aligning with the stakeholders and the responsible department, I designed 
 
 <div className="case-images">
   <figure>
-    <img src="re-enrollment/new-screens-1.png"/>
+    <img src="re-enrollment/new-screens-1.svg"/>
     <figcaption>1. Pending Re-enrollment List</figcaption>
   </figure>
 
   <figure>
-    <img src="re-enrollment/new-screens-2.png"/>
+    <img src="re-enrollment/new-screens-2.svg"/>
     <figcaption>2. Payment of Outstanding Fees</figcaption>
   </figure>
 
   <figure>
-    <img src="re-enrollment/new-screens-3.png"/>
+    <img src="re-enrollment/new-screens-3.svg"/>
     <figcaption>3. Payment Method Selection</figcaption>
   </figure>
 
   <figure>
-    <img src="re-enrollment/new-screens-4.png"/>
+    <img src="re-enrollment/new-screens-4.svg"/>
     <figcaption>4. Choice Between Payment and Negotiation</figcaption>
   </figure>
 
   <figure>
-    <img src="re-enrollment/new-screens-5.png"/>
+    <img src="re-enrollment/new-screens-5.svg"/>
     <figcaption>5. Conclusion - After Payment</figcaption>
   </figure>
 </div>
