--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -52,7 +52,7 @@ After aligning with the stakeholders and the responsible department, I designed 
 
   <figure>
     <img src="re-enrollment/new-screens-4.svg"/>
-    <figcaption>4. Choice Between Payment and Negotiation</figcaption>
+    <figcaption>4. Choice - Payment or Negotiation</figcaption>
   </figure>
 
   <figure>
