melhorias no estilo dos cases

--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -44,7 +44,9 @@ After aligning with the stakeholders and the responsible department, I designed 
     <img src="re-enrollment/new-screens-2.svg"/>
     <figcaption>2. Payment of Outstanding Fees</figcaption>
   </figure>
+</div>
 
+<div className="case-images">
   <figure>
     <img src="re-enrollment/new-screens-3.svg"/>
     <figcaption>3. Payment Method Selection</figcaption>
@@ -54,7 +56,9 @@ After aligning with the stakeholders and the responsible department, I designed 
     <img src="re-enrollment/new-screens-4.svg"/>
     <figcaption>4. Choice - Payment or Negotiation</figcaption>
   </figure>
+</div>
 
+<div className="case-images">
   <figure>
     <img src="re-enrollment/new-screens-5.svg"/>
     <figcaption>5. Conclusion - After Payment</figcaption>
