--- a/src/app/re-enrollment/case.mdx
+++ b/src/app/re-enrollment/case.mdx
@@ -1,5 +1,5 @@
 import * as motion from "framer-motion/client";
-import Image from 'next/image'
+import { TradeDownIcon, UserCircle02Icon, Clock04Icon, Rocket02Icon, StarFaceIcon, AlertDiamondIcon } from "hugeicons-react";
 
 <motion.div
   viewport={{ once: true }}
@@ -23,8 +23,14 @@ How I designed the re-enrollment flow, automating financial processes and boosti
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 
-## Start the project
-Before this project, every re-enrollment was done manually with human contact.
+## What were the problems?
+Before, each re-enrollment was done manually with human contact.
+
+<div className="project-cards">
+- <TradeDownIcon/> Low conversion rate
+- <UserCircle02Icon/> Needed an operator
+- <Clock04Icon/> No previous version
+</div>
 
 <figure>
   <img src="re-enrollment/frustrated-student.png" className="shadow-yellow-500/40" />
@@ -42,11 +48,9 @@ After aligning with the stakeholders and the responsible department, I designed 
 
   <figure>
     <img src="re-enrollment/new-screens-2.svg"/>
-    <figcaption>2. Payment of Outstanding Fees</figcaption>
+    <figcaption>2. Pending Agreements and Payments</figcaption>
   </figure>
-</div>
-
-<div className="case-images">
+  
   <figure>
     <img src="re-enrollment/new-screens-3.svg"/>
     <figcaption>3. Payment Method Selection</figcaption>
@@ -57,13 +61,6 @@ After aligning with the stakeholders and the responsible department, I designed 
     <figcaption>4. Choice - Payment or Negotiation</figcaption>
   </figure>
 </div>
-
-<div className="case-images">
-  <figure>
-    <img src="re-enrollment/new-screens-5.svg"/>
-    <figcaption>5. Conclusion - After Payment</figcaption>
-  </figure>
-</div>
 </motion.div>
 
 <motion.div
@@ -72,19 +69,24 @@ After aligning with the stakeholders and the responsible department, I designed 
   whileInView={{ opacity: 1, y: [20, 0] }}
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 
-## Problem: Clarifying payment vs negotiation flow
+## Results
 
-The stakeholders were uncertain if users would understand the difference between choosing **Proceed to Payment** or **Proceed to Negotiation** (image 4 above).
+We were uncertain if users would understand the difference between choosing **Proceed to Payment** or **Proceed to Negotiation** (screen 4 above).
 
-**Conducted unmoderated usability test:** users completed the re-enrollment flow (shown in the images above) while going through the pending debts screen.
+Conducted unmoderated usability test: users completed the re-enrollment flow (screens above) while going through the pending debts screen.
+One of the post-test questions validated what the journey recordings also indicated: <mark>100% of participants said they felt confident about choosing between Proceed to Payment or Proceed to Negotiation (screen 2 above)</mark>, and the subsequent page aligned with their expectations from that choice.
 
-One of the post-test questions validated what the journey recordings also indicated: <mark>100% of participants said they felt confident</mark> about choosing between **Proceed to Payment** or **Proceed to Negotiation**, and the subsequent page aligned with their expectations from that choice.
+However, an unexpected problem arose: in addition to some misclicks, <mark>some users reported confusion on this screen due to 2 payment boxes appearing consecutively.</mark>
 
-However, an <mark>unexpected problem arose:</mark> in addition to some misclicks, some users reported confusion on this screen due to two payment boxes appearing consecutively.
+<div className="project-cards">
+- <Rocket02Icon/> 13 unmoderated tests performed
+- <StarFaceIcon/> All felt confident regarding screen 4
+- <AlertDiamondIcon/> Dual boxes led to confusion on screen 2
+</div>
 
 <figure>
   <img src="re-enrollment/maze.png" className="shadow-blue-500/40" />
-  <figcaption>Maze test showed users were confused by two consecutive payment boxes.</figcaption>
+  <figcaption>Maze test showed users were confused by 2 consecutive payment boxes.</figcaption>
 </figure>
 </motion.div>
 
@@ -95,7 +97,7 @@ However, an <mark>unexpected problem arose:</mark> in addition to some misclicks
   transition={{ delay: 0.4, duration: 0.4, ease: "easeOut" }}>
 
 ## Proposed solution
-Utilize a step-by-step pattern to avoid confusing users about the existence of two separate yet sequential payments.
+Utilize a step-by-step pattern to avoid confusing users about the existence of 2 separate yet sequential payments.
 
 According to the responsible department, after this feature was implemented, <mark>the number of outstanding payments and re-enrollments increased significantly.</mark>
 
